testsuite/tests/structs/invalid_env_md/not_a_struct.lkt
import common

@metadata class Metadata: FooNode {
}
